# BlackHole

./: .eslintrc.json  .gitignore  README.md  lefthook.yml  next.config.mjs  package.json  tailwind.config.js  tsconfig.json  vercel.json  vitest.config.ts  vitest.setup.ts  vitest.shader.config.ts
docs/: ARCHITECTURE.md  (+2 more)
physics-engine/gravitas-core/: Cargo.toml  README.md
physics-engine/gravitas-core/src/: constants.rs  lib.rs
physics-engine/gravitas-core/src/geodesic/: hamiltonian.rs  integrator.rs  mod.rs  termination.rs
physics-engine/gravitas-core/src/invariants/: audit.rs  constants_of_motion.rs  mod.rs  renormalization.rs
physics-engine/gravitas-core/src/metric/: kerr.rs  minkowski.rs  mod.rs  schwarzschild.rs
physics-engine/gravitas-core/src/physics/: disk.rs  magnetosphere.rs  mod.rs  plunge.rs  polarization.rs  radiative_transfer.rs  redshift.rs  shadow.rs  spectrum.rs  synchrotron.rs
physics-engine/gravitas-core/src/quantum/: bekenstein.rs  hawking.rs  mod.rs
physics-engine/gravitas-core/src/spacetime/: curvature.rs  embedding.rs  frame_drag.rs  lightcone.rs  mod.rs
physics-engine/gravitas-core/src/tensor/: christoffel.rs  metric_tensor.rs  mod.rs
physics-engine/gravitas-core/tests/: bekenstein.rs  conservation.rs  hawking_spectrum.rs  isco.rs  magnetosphere.rs  near_extremal.rs  normalize.rs  photon_ring.rs  plunge.rs  plunge_trajectory.rs  polarization.rs  radiative_transfer.rs  schwarzschild_degenerate.rs  synchrotron.rs  timelike_renormalize.rs
physics-engine/gravitas-wasm/: Cargo.toml  README.md
physics-engine/gravitas-wasm/src/: camera.rs  lib.rs  sab.rs
physics-engine/gravitas-wasm/tests/: sab_bounds.rs
(+166 files in other folders)
