[package]
name = "gravitas-wasm"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "WebAssembly bridge for the Gravitas GR physics engine. Connects the Rust kernel to browser-based renderers via SharedArrayBuffer."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
gravitas-core = { path = "../gravitas-core", version = "0.1.0" }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Performance"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
glam = { version = "0.24", features = ["libm"] }
console_error_panic_hook = "0.1.7"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
